runbot_merge/static/src/runbot_merge.css
/* ... */
/* endregion */

h1:has(+ h2.ministate) {
    display: inline-block;
}
h2.ministate {
    margin-left: 1ex;
    display: inline-flex;
    flex-wrap: wrap;
    vertical-align: center;
    gap: 1ex;
    &>div {
        display: grid;
        grid-template-rows: repeat(4, 25%);
        grid-template-columns: repeat(3, 1ex);
        height: 1.5em;

        &>a:hover {
            outline: 1px solid var(--color-foreground);
            transition: transform 0.5s ease;
            transform: scale(150%);
        }
    }
}
.staging:target {
    outline: 1px solid var(--color-foreground);
}

